--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="" type="module"></script>
+  <script type="module" src="/javascript/maps/big-map.js"></script>
+  <script type="module" src="/javascript/favoris-ajax.js" ></script>
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <title>Rest'Où</title>
@@ -12,6 +14,9 @@
 <body>
 
   {{{body}}}
-  
+    <script 
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaTl-5DZ3GsCZgpGQqsnXrLKdqTeD1uV4"
+      
+    ></script>
 </body>
 </html>
