--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/auth/signup" class="form">
+<form method="post" action="/signup" class="form">
     {{> flashMessage }}
 
     <label for="firstName">Firstname</label>
@@ -14,5 +14,5 @@
     <button class="btn">Sign up</button>
 </form>
 <p>
-    Already an experienced critic of the most raffined French cuisine ? <a href="/auth/signin">Sign in</a>
+    Already an experienced critic of the most raffined French cuisine ? <a href="/signin">Sign in</a>
 </p>
