--- a/views/partials/adminButton.hbs
+++ b/views/partials/adminButton.hbs
@@ -1,4 +1,4 @@
-{{#if isAdmin}}
+{{#if isLoggedIn}}
 <a href="/restaurant/edit/:id">Edit Restaurant</a>
 <a href="/restaurant-list/{{region}}">Delete Restaurant</a>
 {{/if}}
