--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/auth/signin" class="form">
+<form method="post" action="/signin" class="form">
     {{> flashMessage}}
 
     <label for="email">email</label>
@@ -10,5 +10,5 @@
 </form>
 
 <p>
-    Don't have an account yet ? <a href="/auth/signup">Sign up & enjoy amazing features</a>
+    Don't have an account yet ? <a href="/signup">Sign up & enjoy amazing features</a>
 </p>
