navBar styling in progress

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+@import "home.index.css";
+@import "navBar.css";
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -6,3 +9,4 @@ body {
 a {
   color: #00B7FF;
 }
+
