fixed typo and missing package

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
   <title>Rest'Où</title>
 </head>
 <body>
-  {{> nabBar }}
+  {{> navBar }}
   {{{body}}}
     <script 
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaTl-5DZ3GsCZgpGQqsnXrLKdqTeD1uV4"
