--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import "home.index.css";
+@import "index.home.css";
 @import "navBar.css";
 /* Importing Google fonts */
 @import url("https://fonts.googleapis.com/css?family=Varela+Round");
