--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     /* font-style: averta, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
-    /* font-family: larsseit, -apple-system, system-ui, BlinkMacSystemFont, SegoeUI, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
+    font-family: larsseit, -apple-system, system-ui, BlinkMacSystemFont, SegoeUI, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   
   }
 
@@ -19,7 +19,7 @@
   }
   
   .navContainer nav a{
-    padding: 0px 60px;
+    padding: 0px 5px;
   }
   
   .navContainer nav{
