--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,24 @@
-<div class="container mt-5 d-flex justify-content-center">
+  <section class="home bg">
+        <span class="title-txt">
+            <h1 class="title">Looking for a high end restaurant near your location ?</h1>
+            <h3 class="home-p">Ask <span class="job-title"><strong>Rest'OU</strong></span> 
+            </h3>
+        </span>
+        <div class="home-div">
+            <img src="images/Paper map-amico-2.png" alt="Paper map illustration">
+        </div>
+    </section>
+    
+  <div class="container mt-5 d-flex justify-content-center">
     <form class="search" action="/restaurants" method="GET">
         <input class="bar" type="text" placeholder="Search by department..." name="resName">
         <button><i class="fas fa-search"></i>SEARCH</button>
         <button><a href="/restaurants"><i class="fas fa-sync-alt"></i>REFREH</a></button>
     </form>
 </div>
+
+
+    
   {{! just a quick config with the CSS from artistify to have a quick visual feedback }}
   {{! Copied CSS in public/stylesheets/home.index }}
 
