--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
-@import "index.home.css";
+@import "home.index.css";
 @import "navBar.css";
 /* Importing Google fonts */
 @import url("https://fonts.googleapis.com/css?family=Varela+Round");
@@ -7,6 +7,7 @@
 @import url("cards.css");
 @import url("search_bar.css");
 @import url("restaurant.css");
+@import url("footer.css");
 
 
 body {
