last changes without bugs

--- a/public/stylesheets/restaurant.css
+++ b/public/stylesheets/restaurant.css
@@ -19,3 +19,16 @@
     margin-left: 50%;
     overflow: auto;
 }
+
+.restauImg-div {
+    width: 30%;
+}
+
+.img-restaurant {
+    width: 100%;
+
+}
+
+.restau-map {
+    width: 30%;
+}
