--- a/views/partials/adminButton.hbs
+++ b/views/partials/adminButton.hbs
@@ -1,4 +1,4 @@
-{{#if isAdmin}}
-<a href="/restaurant/edit/:id">Edit Restaurant</a>
-<a href="/restaurant-list/{{region}}">Delete Restaurant</a>
-{{/if}}
+
+<a href="/restaurant/{{this._id}}/edit">Edit Restaurant</a>
+<a href="/restaurant/{{this._id}}">Delete Restaurant</a>
+
