--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -5,7 +5,8 @@
   <nav>
     <a href="/" class="link">home</a>
     |
-    <a href="/restaurant" class="link">Restaurant</a>
+    <!--<a href="/" class="link">Restaurant</a>-->
+
     {{#unless isLoggedIn}}
       <a class="link" href="/auth/signin"><i class="fas fa-user fa-1x"></i> signin</a>
       <a class="link" href="/auth/signup">signup</a>
