--- a/views/partials/adminButton.hbs
+++ b/views/partials/adminButton.hbs
@@ -1,4 +1,4 @@
 
-<a href="/restaurant/{{this._id}}/edit">Edit Restaurant</a>
-<a href="/restaurant/{{this._id}}">Delete Restaurant</a>
+<a href="/restaurants/{{restaurant._id}}/edit">Edit Restaurant</a>
+<a href="/restaurants/{{restaurant._id}}/delete">Delete Restaurant</a>
 
