--- a/views/restaurants/new.hbs
+++ b/views/restaurants/new.hbs
@@ -3,21 +3,21 @@
         <h1 class="title text-center">Create Restaurant</h1>
         <div class="mb-3">
             <label for="name" class="form-label">name</label>
-            <input class="input form-control" type="text" id="name" name="name" value="Name">
+            <input class="input form-control" type="text" id="name" name="name" placeholder="Name">
         </div>
 
         <div class="mb-3">
             <label for="address" class="form-label">address</label>
-            <input class="input form-control" type="address" id="address" name="address" value="adress">
+            <input class="input form-control" type="address" id="address" name="address" placeholder="adress">
         </div>
         <div class="mb-3">
             <label for="minPrice" class="form-label">minPrice</label>
-            <input class="input form-control" type="text" id="minPrice" name="minPrice" value="20">
+            <input class="input form-control" type="text" id="minPrice" name="minPrice" placeholder="20">
 
         </div>
         <div class="mb-3">
             <label for="maxPrice" class="form-label">maxPrice</label>
-            <input class="input form-control" type="text" id="maxPrice" name="maxPrice" value="100">
+            <input class="input form-control" type="text" id="maxPrice" name="maxPrice" placeholder="100">
 
         </div>
         <div class="mb-3">
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">description</label>
-            <input class="input form-control" type="text" id="description" name="description" value="Amazing">
+            <input class="input form-control" type="text" id="description" name="description" placeholder="Amazing">
 
         </div>
         <div class="mb-3">
@@ -53,12 +53,12 @@
         <div class="mb-3">
 
             <label for="phoneNumber" class="form-label">phoneNumber</label>
-            <input class="input form-control" type="text" id="phoneNumber" name="phoneNumber" value="0665587888">
+            <input class="input form-control" type="text" id="phoneNumber" name="phoneNumber" placeholder="0665587888">
         </div>
         <div class="mb-3">
 
             <label for="website" class="form-label">website</label>
-            <input class="input form-control" type="text" id="website" name="website" value="www.resto.fr">
+            <input class="input form-control" type="text" id="website" name="website" placeholder="www.resto.fr">
         </div>
 
         <div class="mb-3">
