map and favoriteé

--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -25,5 +25,14 @@
   .navContainer nav{
     display: flex;
   }
+
+  .favoriteNav {
+    
+      background: red;
+      display: flex;
+      justify-content: flex-end;
+      padding: 10px;
+  
+  }
   
   /* _________________________ */
