--- a/views/users/wish-list.hbs
+++ b/views/users/wish-list.hbs
@@ -2,7 +2,7 @@
 <h1 class="text-center">Your wish-list</h1>
     <div class="mt-5 d-flex">
         <div class="cards">
-            {{#each favoris}}
+            {{#each restaurants}}
                 <div class="card-restaurant card" style="background-image: url({{this.picture}}">
                     <a href="/restaurants/{{this._id}}" class="black" >
                         <div class="w-100 d-flex align-items-center justify-content-between">
