--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
   {{!-- <script src="" type="module"></script> --}}
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script type="module" src="/javascript/maps/big-map.js"></script>
+  <script type="module" src="/javascript/maps/little-map.js"></script>
   <script type="module" src="/javascript/favoris-ajax.js" ></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.min.js"></script>
@@ -19,8 +20,9 @@
 <body>
   {{> navBar }}
   {{{body}}}
-    <script 
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaTl-5DZ3GsCZgpGQqsnXrLKdqTeD1uV4"
+
+      <script 
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaTl-5DZ3GsCZgpGQqsnXrLKdqTeD1uV4&libraries=&v=weekly"
       
     ></script>
 </body>
