--- a/public/stylesheets/restaurant.css
+++ b/public/stylesheets/restaurant.css
@@ -3,12 +3,11 @@
 }
 
 .restauPage-unscrollable, .infos-scrollable {
-
+    width: 50%;
 }
 
 .restauPage-unscrollable {
     position: fixed;
-    left: 0;
     left: 0;
     width: 100%;
     margin-left: 2em;
@@ -21,10 +20,12 @@
 
 .restauImg-div {
     width: 30%;
+
 }
 
 .img-restaurant {
     width: 100%;
+    margin-bottom: 8px;
 
 }
 
