--- a/views/users/wish-list.hbs
+++ b/views/users/wish-list.hbs
@@ -1,5 +1,5 @@
 <div class="container mt-5 d-flex justify-content-center"></div>
-<h1 class="text-center">Your wish-list</h1>
+<h1 class="text-center purple-dark">Your wish-list 😻</h1>
     <div class="mt-5 d-flex">
         <div class="cards">
             {{#each restaurants}}
