--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
             </h3>
         </span>
         <div class="home-div">
-            <img src="images/Paper map-amico-2.png" alt="Paper map illustration">
+            <img src="images/Paper map-amico (1).png" alt="Paper map illustration">
         </div>
     </section>
     
