--- a/public/stylesheets/index.home.css
+++ b/public/stylesheets/index.home.css
@@ -27,9 +27,9 @@ section{
     flex-direction: column;
     align-items: left;
 }
-.bg{
+/* .bg{
     background-color: #f8fafc;
-}
+} */
 
 .home-div img{
     width: 400px;
