--- a/views/restaurants/restauPage.hbs
+++ b/views/restaurants/restauPage.hbs
@@ -11,11 +11,11 @@
 
 <div class="restauPage-unscrollable">
 
-    <div class="restauImg-div" width="300" >
+    <div class="restauImg-div"s >
       <img src="{{restaurant.picture}}" alt="{{restaurant.name}} picture" />
     </div>
-  <div width="300">
-    <div id="map" class="restau-map"  width="30px" data-lat={{lat}} data-lng={{lng}}></div>
+  <div >
+    <div id="map" class="restau-map"  width="70px" data-lat={{lat}} data-lng={{lng}}></div>
 
     </div>
     
