--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -27,8 +27,8 @@
   }
 
   .favoriteNav {
-    
-      background: red;
+    width: 85vw;
+
       display: flex;
       justify-content: flex-end;
       padding: 10px;
