--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footerContainer">
     <div class="footer-container">
         <div class="footer-message-container">
         </div>
