--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -16,6 +16,10 @@
     align-items: center;
     padding: 20px;
     border: solid 1px black;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background: #FAF3DD;
   }
   
   .navContainer nav a{
