--- a/views/partials/reviewFormPartial.hbs
+++ b/views/partials/reviewFormPartial.hbs
@@ -1,16 +1,16 @@
 <!--send user id and restaurant idwith javascript-->
-<form id="review" action="/restaurant/:id">
+<form id="review" method="post" action="/reviews/restaurant/{{restaurant._id}}">
     <div class="pinfo">Give a note to the restaurant</div>
         <div class="form-group">
             <div class="col-md-4 inputGroupContainer">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-heart"></i></span>
-                    <select class="form-control" id="rate">
-                        <option value="1star">1</option>
-                        <option value="2stars">2</option>
-                        <option value="3stars">3</option>
-                        <option value="4stars">4</option>
-                        <option value="5stars">5</option>
+                    <select class="form-control" id="rate" name="note">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                 </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="col-md-4 inputGroupContainer">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-pencil"></i></span>
-                    <textarea class="form-control" id="review" rows="3"></textarea>
+                    <input class="form-control" name="comment" id="review" rows="3"></input>
                 </div>
             </div>
         </div> 
