--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,16 +1,12 @@
 <footer class="footerContainer">
     <div class="footer-container">
         <div class="footer-message-container">
-        </div>
-        <div class="footer-contact-container">
-            <form>
-                <button>Submit</button>
-            </form>
+            <h3>Et bon appétit !</h3>
         </div>
         <div class="footer-social-network-container">
-            <a href="#">Pinterest</a>
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
+                <a href="#">Pinterest</a>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
         </div>
     </div>
     
