--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,18 +1,20 @@
-<form method="post" action="/auth/signup" class="form">
-    {{> flashMessage }}
+<form method="post" action="/auth/signup" class="form form-container">
+    <h2 class="form-title">Hi there ! <br> <span class="beGreen">Sign up</span> and get acces to <span class="beGreen">more features</span></h2>
+    {{> flashMessage}}
 
-    <label for="firstName">Firstname</label>
-    <input class="input" type="text" id="name" name="firstName" >
-    <label for="lastName">Lastname</label>
-    <input class="input" type="text" id="lastname" name="lastName">
-    <label for="email">Email</label>
-    <input class="input" type="email" id="email" name="email" >
-    <label for="password">Password</label>
-    <input class="input" type="password" id="password" name="password">
-    <label for="address">Address</label>
-    <input class="input" type="address" id="address" name="address">
-    <button class="btn">Sign up</button>
-</form>
-<p>
-    Already an experienced critic of the most raffined French cuisine ? <a href="/auth/signin">Sign in</a>
+    <label for="firstName"></label>
+    <input class="input" type="text" id="name" name="firstName" placeholder="First name" >
+    <label for="lastName"></label>
+    <input class="input" type="text" id="lastname" name="lastName" placeholder="Last name">
+    <label for="email"></label>
+    <input class="input" type="email" id="email" name="email" placeholder="Email" >
+    <label for="password"></label>
+    <input class="input" type="password" id="password" name="password" placeholder="password">
+    <label for="address"></label>
+    <input class="input" type="address" id="address" name="address" placeholder="Address">
+    <button class="btn-form">Sign up</button>
+    
+    <p>
+    Already an experienced critic of the most raffined French cuisine ?  <br> <a href="/auth/signin">Sign in</a>
 </p>
+</form>
