--- a/views/restaurants/updateRestaurants.hbs
+++ b/views/restaurants/updateRestaurants.hbs
@@ -1,6 +1,8 @@
-<div class="container mt-5">
-    <form method="post" action="/restaurants/{{restaurant._id}}/edit" class="form" enctype="multipart/form-data">
+    <form method="post" action="/restaurants/{{restaurant._id}}/edit" class="form form-container" enctype="multipart/form-data">
         <h1 class="title text-center">Update Restaurant</h1>
+
+        {{> flashMessage}}
+
         <div class="mb-3">
             <label for="name" class="form-label">name</label>
             <input class="input form-control" type="text" id="name" name="name" value="{{restaurant.name}}">
@@ -72,6 +74,5 @@
 
 
 
-        <button class="btn btn-primary mb-3">Update</button>
+        <button class="btn-form">Update</button>
     </form>
-</div>
