--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -16,7 +16,8 @@
   flex-direction: row;
   align-items: center;
   padding: 20px;
-  border: solid 1px black;
+  background-color: white;
+  box-shadow: 0px 13px 10px -4px rgba(255,255,255,0.5);
 }
 
 .navContainer .link {
@@ -66,14 +67,11 @@
   font-weight: 600;
   letter-spacing: 2px;
   background-color: #68b0ab;
+}
+
+.logo a {
   color: white;
   text-decoration: none;
 }
 
-.logo, .logo:active,
-.logo:visited,
-.logo:hover {
-  color: white;
-  text-decoration: none;
-}
 /* _________________________ */
