--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,8 @@
 @import url("button.css");
 @import url("forms.css");
 @import url("banner-wish-list.css");
+@import url("flash.msg.css");
+
 
 * {
   margin: 0px;
