--- a/public/stylesheets/navBar.css
+++ b/public/stylesheets/navBar.css
@@ -24,11 +24,17 @@
   padding: 18px 26px !important;
   color: #68b0ab;
   font-weight: 600;
+  letter-spacing: 2px;
 }
 
 .navContainer .link:hover {
-  background-color: #c8d5b9;
-  color: #faf3dd;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 7px 26px;
+  border: none;
+  font-weight: 600;
+  letter-spacing: 2px;
+  background-color: #e4e4e7;
 }
 
 .link a {
