finished form design (not responsive though)

--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -8,8 +8,8 @@
     <input class="input" type="password" id="password" name="password" placeholder="password"></input>
     <button class="btn-form">Sign in</button>
 
-<p>
-    Don't have an account yet ? <br> <a href="/auth/signup"> Sign up</a> & enjoy amazing features
+<p class="form-alt-option">
+    Don't have an account yet ?<a href="/auth/signup"> Sign up</a> <br> & enjoy amazing features
 </p>
 
 </form>
