--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -9,12 +9,12 @@
     <label for="email"></label>
     <input class="input" type="email" id="email" name="email" placeholder="Email" >
     <label for="password"></label>
-    <input class="input" type="password" id="password" name="password" placeholder="password">
+    <input class="input" type="password" id="password" name="password" placeholder="Password">
     <label for="address"></label>
     <input class="input" type="address" id="address" name="address" placeholder="Address">
     <button class="btn-form">Sign up</button>
     
-    <p>
+    <p class="form-alt-option">
     Already an experienced critic of the most raffined French cuisine ?  <br> <a href="/auth/signin">Sign in</a>
 </p>
 </form>
