--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -1,63 +1,72 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-.beGreen{
-    color: #68b0ab; 
+.beGreen {
+  color: #68b0ab;
 }
 
 .btn-form {
-    cursor: pointer;
-    border-radius: 150px;
-    padding: 5px 20px;
-    border: none;
-    font-weight: 500;
-    letter-spacing: 2px;
-    background-color: #68b0ab;
-    color: white;
-    margin: 20px 0px;
-  }
+  cursor: pointer;
+  border-radius: 150px;
+  padding: 5px 20px;
+  border: none;
+  font-weight: 500;
+  letter-spacing: 2px;
+  background-color: #68b0ab;
+  color: white;
+  margin: 20px 0px;
+}
 
 .form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white !important;
-    box-shadow: 0px 0px 30px 0px rgba(104,176,171,1) !important;
-    margin: 50px 300px !important;
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  background-color: white !important;
+  border: solid 2px #68b0ab;
+  /* box-shadow: 0px 0px 30px 0px rgba(104,176,171,1) !important; */
+  /* box-shadow: 0px 3.34235px 9.35859px #68b0ab ; */
+  box-shadow: 0px 1.5px 5px rgb(104, 176, 171);
+  margin: 70px auto !important;
+  border-radius: 20px;
+  padding-bottom: 20px ;
+  width: 450px;
 }
 
-.form-container p{
-text-align: center;
+.form-alt-option {
+  text-align: center;
+  margin: px 20%;
 }
 
-.form-container p a{
-    color: #68b0ab;
-    font-weight: 500;
+.form-alt-option a {
+  color: #68b0ab;
+  font-weight: 500;
 }
-
 
 .form-title {
-    text-align: center;
-    margin: 10px 10%;
-    padding: 20px 10px;
+  text-align: center;
+  margin: 10px 10%;
+  padding: 20px 10px;
 }
 
-input.input{
-    height: 60px;
-    padding: 13px 16px;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 2;
-    border-radius: 5px;
-    border: solid 1px #68b0ab;
-    width: fit-content;
-    margin: 5px 20px;
+input.input {
+  height: 60px;
+  padding: 13px 16px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 2;
+  border-radius: 5px;
+  border: solid 1px #68b0ab;
+  width: 250px;
+  margin: 5px auto;
 }
+
+input.input:focus {
+  outline: none;
+  box-shadow: 0px 0px 10px 0px rgba(104, 176, 171, 1);
+  border: solid 1px #68b0ab !important;
+}
+
