--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,11 +20,11 @@
 <body>
   {{> navBar }}
   {{{body}}}
-  {{> footer }}
+
       <script 
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaTl-5DZ3GsCZgpGQqsnXrLKdqTeD1uV4&libraries=&v=weekly"
       
     ></script>
- 
+  <!--{{> footer }}-->
 </body>
 </html>
