--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,13 +1,15 @@
-<footer class="footerContainer">
-    <div class="footer-container">
-        <div class="footer-message-container">
-            <h3>Et bon appétit !</h3>
-        </div>
-        <div class="footer-social-network-container">
-                <a href="#">Pinterest</a>
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-        </div>
+<section class="footer-down">
+  <footer class="footerContainer">
+    <div class="logo">
+      <a href="/"> BON APPETIT ! </a>
     </div>
-    
-</footer>
+    <nav>
+      <a href="#" class="link"><i class="fas fa-user fa-1x"></i>Pinterest</a>
+      |
+      <a class="link" href="#"><i class="fas fa-user fa-1x"></i>Instagram</a>
+      |
+      <a class="link" href="#"><i class="fas fa-user fa-1x"></i>Facebook></a>
+
+    </nav>
+  </footer>
+</section>
