--- a/views/restaurants/updateRestaurants.hbs
+++ b/views/restaurants/updateRestaurants.hbs
@@ -1,66 +1,66 @@
-    <form method="post" action="/restaurants/{{restaurant._id}}/edit" class="form form-container" enctype="multipart/form-data">
+<form method="post" action="/restaurants/{{restaurant._id}}/edit"  class="form form-container" enctype="multipart/form-data">
         <h1 class="title text-center">Update Restaurant</h1>
 
         {{> flashMessage}}
 
         <div class="mb-3">
             <label for="name" class="form-label">name</label>
-            <input class="input form-control" type="text" id="name" name="name" value="{{restaurant.name}}">
+            <input class="input form-control" type="text" id="name" name="name" placeholder="Name">
         </div>
 
         <div class="mb-3">
             <label for="address" class="form-label">address</label>
-            <input class="input form-control" type="address" id="address" name="address" value="{{restaurant.address}}">
+            <input class="input form-control" type="address" id="address" name="address" placeholder="adress">
         </div>
         <div class="mb-3">
             <label for="minPrice" class="form-label">minPrice</label>
-            <input class="input form-control" type="text" id="minPrice" name="minPrice" value="{{restaurant.minPrice}}">
+            <input class="input form-control" type="text" id="minPrice" name="minPrice" placeholder="20">
 
         </div>
         <div class="mb-3">
             <label for="maxPrice" class="form-label">maxPrice</label>
-            <input class="input form-control" type="text" id="maxPrice" name="maxPrice" value="{{restaurant.maxPrice}}">
+            <input class="input form-control" type="text" id="maxPrice" name="maxPrice" placeholder="100">
 
         </div>
         <div class="mb-3">
             <label for="cuisineType" class="form-label">cuisineType</label>
-            <input class="input form-control" type="text" id="cuisineType" name="cuisineType" value="{{restaurant.cuisineType}}">
+            <input class="input form-control" type="text" id="cuisineType" name="cuisineType">
 
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">description</label>
-            <input class="input form-control" type="text" id="description" name="description" value="{{restaurant.description}}">
+            <input class="input form-control" type="text" id="description" name="description" placeholder="Amazing">
 
         </div>
         <div class="mb-3">
             <label for="stars" class="form-label">stars</label>
-            <input class="input form-control" type="text" id="stars" name="stars" value="{{restaurant.stars}}">
+            <input class="input form-control" type="text" id="stars" name="stars">
 
         </div>
         <div class="mb-3">
             <label for="standing" class="form-label">standing</label>
-            <input class="input form-control" type="text" id="standing" name="standing" value="{{restaurant.standing}}">
+            <input class="input form-control" type="text" id="standing" name="standing">
 
         </div>
         <div class="mb-3">
 
             <label for="greenTouch" class="form-label">greenTouch</label>
-            <input class="input form-control" type="text" id="greenTouch" name="greenTouch" value="{{restaurant.greenTouch}}">
+            <input class="input form-control" type="text" id="greenTouch" name="greenTouch">
         </div>
         <div class="mb-3">
             <label for="openingHours" class="form-label">openingHours</label>
-            <input class="input form-control" type="text" id="openingHours" name="openingHours" value="{{restaurant.openingHours}}">
+            <input class="input form-control" type="text" id="openingHours" name="openingHours">
 
         </div>
         <div class="mb-3">
 
             <label for="phoneNumber" class="form-label">phoneNumber</label>
-            <input class="input form-control" type="text" id="phoneNumber" name="phoneNumber" value="{{restaurant.phoneNumber}}">
+            <input class="input form-control" type="text" id="phoneNumber" name="phoneNumber" placeholder="0665587888">
         </div>
         <div class="mb-3">
 
             <label for="website" class="form-label">website</label>
-            <input class="input form-control" type="text" id="website" name="website" value="{{restaurant.website}}">
+            <input class="input form-control" type="text" id="website" name="website" placeholder="www.resto.fr">
         </div>
 
         <div class="mb-3">
@@ -69,10 +69,7 @@
                 choose a picture
 
             </label>
-            <input class="is-hidden" type="file" id="picture" name="picture" value="{{restaurant.picture}}">
+            <input class="is-hidden" type="file" id="picture" name="picture">
         </div>
-
-
-
-        <button class="btn-form">Update</button>
-    </form>
+ <button class="btn-form">Update</button>
+</form>
