--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,11 +4,11 @@
       <a href="/"> BON APPETIT ! </a>
     </div>
     <nav>
-      <a href="#" class="link"><i class="fas fa-user fa-1x"></i>Pinterest</a>
+      <a href="#" class="link"><i class="fab fa-pinterest"></i> Pinterest</a>
       |
-      <a class="link" href="#"><i class="fas fa-user fa-1x"></i>Instagram</a>
+      <a class="link" href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
       |
-      <a class="link" href="#"><i class="fas fa-user fa-1x"></i>Facebook></a>
+      <a class="link" href="#"><i class="fab fa-facebook"></i> Facebook</a>
 
     </nav>
   </footer>
